Fix not showing theater view

--- a/content.css
+++ b/content.css
@@ -1,7 +1,3 @@
-#photos_snowlift {
-    display: none;
-}
-
 .fb_post_screenshot_infobox {
     position: fixed;
     top: 50px; 
